platforms ref added
--> Courses platforms reference links were added;
--> ::after pseudo-elements for references were changed by divs and a little of JS.

--- a/html/index.html
+++ b/html/index.html
@@ -220,60 +220,83 @@
                   
                   <ul id="courses_list" class="display_flex">
                      <li class="display_flex">
-                        <div class="cursoemvideo">
+                        <div id="course_1" class="cursoemvideo">
                            <img src="../images/chose/courses/html5_css3_logo-edited.png" alt="CSS3 and HTML5 logos">
+
                            <h3>HTML5 and CSS3</h3>
                            <p>Online Course<br><span class="number">40 hours</span></p>
+
+                           <a id="course_ref_1" class="cursoemvideo_not_showlink" href="https://www.cursoemvideo.com/ " target="_blank" rel="author">By CursoEmVideo</a>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div class="cursoemvideo">
+                        <div id="course_2" class="cursoemvideo">
                            <img src="../images/chose/courses/js_logo-edited.png" alt="Javascript Logo">
+                           
                            <h3>Javascript</h3>
                            <p>Online Course<br><span class="number">40 hours</span></p>
+
+                           <a id="course_ref_2" class="cursoemvideo_not_showlink" href="https://www.cursoemvideo.com/ " target="_blank" rel="author">By CursoEmVideo</a>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div class="cursoemvideo">
+                        <div id="course_3" class="cursoemvideo">
                            <img src="../images/chose/courses/mysql_logo-edited.png" alt="MySql Logo">
+
                            <h3>MySql</h3>
                            <p>Online Course<br><span class="number">40 hours</span></p>
+
+                           <a id="course_ref_3" class="cursoemvideo_not_showlink" href="https://www.cursoemvideo.com/ " target="_blank" rel="author">By CursoEmVideo</a>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div class="cursoemvideo">
+                        <div id="course_4" class="cursoemvideo">
                            <img src="../images/chose/courses/algorithm_logo-edited.png" alt="Algorithm Logo">
+
                            <h3>Algorithm</h3>
                            <p>Online Course<br><span class="number">40 hours</span></p>
+
+                           <a id="course_ref_4" class="cursoemvideo_not_showlink" href="https://www.cursoemvideo.com/ " target="_blank" rel="author">By CursoEmVideo</a>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div class="cursoemvideo">
+                        <div id="course_5" class="cursoemvideo">
                            <img src="../images/chose/courses/git_github_logo-edited.png" alt="Git and Github Logo">
+
                            <h3>Git and Github</h3>
                            <p>Online Course<br><span class="number">20 hours</span></p>
+
+                           <a id="course_ref_5" class="cursoemvideo_not_showlink" href="https://www.cursoemvideo.com/ " target="_blank" rel="author">By CursoEmVideo</a>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div class="cursoemvideo">
+                        <div id="course_6" class="cursoemvideo">
                            <img src="../images/chose/courses/numeric_bases_logo-edited.png" alt="Numeric Bases Logo">
+
                            <h3>Numeric Bases</h3>
                            <p>Online Course<br><span class="number">20 hours</span></p>
+
+                           <a id="course_ref_6" class="cursoemvideo_not_showlink" href="https://www.cursoemvideo.com/ " target="_blank" rel="author">By CursoEmVideo</a>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div class="ogroflix">
+                        <div id="course_7" class="ogroflix">
                            <img src="../images/chose/courses/price_action_logo-edited.png" alt="Price Action Logo">
+
                            <h3>Price Action</h3>
                            <p>Online Course<br><span class="number">50 hours</span></p>
+
+                           <a id="course_ref_7" class="ogroflix_not_showlink" href="https://ogroflix.com.br/ " target="_blank" rel="author">By Ogroflix</a>
                         </div>
                      </li>
                   </ul>
                </div>
 
+
+
                <ul>
                   <li>Programming</li>
-                  <li>(Courses and sites, one by one); (Sites: slides = GTA screen loading; text describing + background of website with paralax effect). HTML, CSS, Algorithm, JS, SQL</li>
+                  <li>(sites, one by one); (Sites: slides = GTA screen loading; text describing + background of website with paralax effect)</li>
                   <li>MQL5, C++, OOP, notions of C#</li>
                   <li>Pratical knowledge, self learning first. Reading the language documentation, mostly, in english. (websites test/learning).</li>
                   <li>Intermediary English.</li>
@@ -297,4 +320,5 @@
 
    <script src="../js/responsiveness.js" defer></script>
    <script src="../js/slides.js" defer></script>
+   <script src="../js/courses_mouse_events.js" defer></script>
 </html>
