extra_knowledge, projects, achievements
--> Extra knowledge added, where 4 items are added (all styles made: media queries, hovers, fonts, transitions...);
--> Div for projects (making the result). Where my developing projects will be showed (only semantic part, htlml);
--> Other achievements: economy, mathmatic, drawings, skating (only semantically writing, html).

--- a/html/index.html
+++ b/html/index.html
@@ -292,18 +292,97 @@
                   </ul>
                </div>
 
+               <div id="extra_knowledge" class="display_flex">
+                  <div id="extra_knowledge_text">
+                     <p>Uniting the<br><span class="emphasis">self-learning</span>, free content avaible on the internet<br>and the <span class="emphasis">practice</span>!</p>
+                  </div>
 
+                  <div id="knowledge_container" class="display_flex">
+                     <p>Also equipped to his brain piece</p>
+                     
+                     <div id="knowledge_level" class="display_flex">
+                        <p id="knowledge_level_title">Knowledge Level</p>
+                        <div id="knowledge_level_marker"></div>
+                        <div id="knowledge_level_reference" class="display_flex">
+                           <p id="knowledge_high">High</p>
+                           <p id="knowledge_low">Low</p>
+                        </div>
+                     </div>
 
-               <ul>
-                  <li>Programming</li>
-                  <li>(sites, one by one); (Sites: slides = GTA screen loading; text describing + background of website with paralax effect)</li>
-                  <li>MQL5, C++, OOP, notions of C#</li>
-                  <li>Pratical knowledge, self learning first. Reading the language documentation, mostly, in english. (websites test/learning).</li>
-                  <li>Intermediary English.</li>
-                  <li>Economy (financial education, notions of economy, technical chart  analyst, process automation).</li>
-                  <li>Mathmatics (Gold medalist of "Prêmio ACIC de Matemática", 2 honrable mentions on OBMEP)</li>
-                  <li>Drawing (hundreds of pratical hours, aiming for hyperrealism).</li>
-                  <li>Skating (hobby of great affection, to wich it has been envolved with great commitment);</li>
+                     <div id="knowledge" class="display_flex">
+                        <div id="knowledge_1" class="knowledge_elem">
+                           <p><strong>MQL5</strong> - auto-trading focused<br>
+                              His first language learned
+                           </p>
+                        </div>
+                        <div id="knowledge_2" class="knowledge_elem">
+                           <p><strong>C++</strong><br>
+                              Learned concurrently with C++
+                           </p>
+                        </div>
+                        <div id="knowledge_3" class="knowledge_elem">
+                           <p><strong>C#</strong><br>
+                              As an extension of knowledge in C++
+                           </p>
+                        </div>
+                        <div id="knowledge_4" class="knowledge_elem">
+                           <p><strong>OOP</strong><br>
+                              Learned with MQL5
+                           </p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               
+               <div id="making_result">
+                  <h3>Making the Result</h3>
+
+                  <div id="project_1" class="projects">
+
+                  </div>
+                  <div id="project_2" class="projects">
+
+                  </div>
+                  <div id="project_3" class="projects">
+
+                  </div>
+                  <div id="project_4" class="projects">
+
+                  </div>
+                  <div id="project_5" class="projects">
+
+                  </div>
+                  <div id="project_6" class="projects">
+
+                  </div>
+               </div>
+
+               <div id="other_achievements">
+                  <div id="economy" class="display_flex">
+                     <img src="" alt="">
+
+                     <p>Economy (financial education, notions of economy, technical chart  analyst, process automation).</p>
+                  </div>
+
+                  <div id="math" class="display_flex">
+                     <img src="" alt="">
+
+                     <p>Mathmatics (Gold medalist of "Prêmio ACIC de Matemática", 2 honrable mentions on OBMEP)</p>
+                  </div>
+
+                  <div id="draw" class="display_flex">
+                     <img src="" alt="">
+
+                     <p>Drawing (hundreds of pratical hours, aiming for hyperrealism).</p>
+                  </div>
+
+                  <div id="skate" class="display_flex">
+                     <img src="" alt="">
+
+                     <p>Skating (hobby of great affection, to wich it has been envolved with great commitment);</p>
+                  </div>
+               </div>
+
                </ul>
             </section>
             <section id="disadvantages">
