--- a/html/fosn_versions.html
+++ b/html/fosn_versions.html
@@ -6,10 +6,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      <title>FOSN - Versions</title>
+      <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+
+      <title>FOSN23 - Versions</title>
    </head>
 
-   <body>
-      <main><a href="https://www.instagram.com/fabio.orione/">SEE ON INSTAGRAM</a></main>
+   <body style="overflow: hidden; padding: 0; margin: 0;">
+      <main style="height: 100vh; width: 100vw; background-color: black; display: flex; align-items: center; justify-content: center; overflow: hidden;"><a href="https://www.instagram.com/fabio.orione/" style="color: white; text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 5vw; letter-spacing: .2em; border: 1px solid orangered; border-radius: 10px; padding: 5vw;">SEE ON INSTAGRAM</a></main>
    </body>
 </html>
